# oneqaz-trading-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
plugins/oneqaz-trading/.claude-plugin/: plugin.json
src/oneqaz_trading_mcp/: config.py  server.py
